registry/registry.yaml
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: docker-registry
  namespace: docker-registry
spec:
  replicas: 1

  selector:

    matchLabels:

      app: docker-registry

  template:

    metadata:

      labels:

        app: docker-registry

    spec:

      containers:

      - name: registry

        image: registry:2

        ports:

        - containerPort: 5000

          name: registry

        volumeMounts:

        - name: registry-storage

          mountPath: /var/lib/registry

        - name: registry-config

          mountPath: /etc/docker/registry

      volumes:

      - name: registry-storage

        persistentVolumeClaim:

          claimName: registry-pvc

      - name: registry-config

        configMap:

          name: registry-config

---

apiVersion: v1

kind: Service

metadata:

  name: docker-registry

  namespace: docker-registry

spec:

  selector:

    app: docker-registry

  ports:

    - protocol: TCP

      port: 5000

      targetPort: 5000

  type: LoadBalancer
 
---

apiVersion: apps/v1

kind: Deployment

metadata:

  name: docker-registry-ui

  namespace: docker-registry

spec:

  replicas: 1

  selector:

    matchLabels:

      app: docker-registry-ui

  template:

    metadata:

      labels:

        app: docker-registry-ui

    spec:

      containers:

        - name: docker-registry-ui

          image: joxit/docker-registry-ui:latest

          ports:

            - containerPort: 80
---

apiVersion: v1

kind: Service

metadata:

  name: docker-registry-ui

  namespace: docker-registry

spec:

  selector:

    app: docker-registry-ui

  ports:

    - protocol: TCP

      port: 8088

      targetPort: 80

  type: ClusterIP

---
